# PulseAlpha-AI

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  history.json  plan.md  pyproject.toml
.github/workflows/: ci.yml
.superpowers/brainstorm/72745-1779609274/state/: server-stopped
docs/superpowers/plans/: 2026-05-23-phase2-feature-engineering.md  2026-05-24-phase3-langgraph-orchestration.md  2026-05-24-phase4-council-reasoning.md  2026-05-26-phase5-report-generation.md  2026-05-28-phase6-backtesting.md  2026-05-29-frontend-ui.md
docs/superpowers/specs/: 2026-05-23-phase2-feature-engineering-design.md  2026-05-24-phase3-langgraph-orchestration-design.md  2026-05-24-phase4-council-reasoning-design.md  2026-05-26-phase5-report-generation-design.md  2026-05-28-phase6-backtesting-design.md  2026-05-29-finance-news-scraper-design.md  2026-05-29-frontend-ui-design.md
infra/docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
libs/connectors/: pyproject.toml
libs/connectors/connectors/: __init__.py  base.py  cache.py  document_rag.py  fii_dii.py  fundamentals.py  ipo_gmp.py  market_data.py  nav.py  news_aggregator.py  nse_announcements.py  nse_document_fetcher.py  nse_quotes.py  screener.py  sentiment.py
libs/features/: pyproject.toml
libs/features/features/: divergence.py  fii_dii.py  ipo_gmp.py  rrg.py
libs/schemas/: __init__.py  pyproject.toml
libs/schemas/schemas/: __init__.py  backtest.py  connectors.py  features.py  models.py  report.py  state.py
services/api/: pyproject.toml
services/api/api/: config.py  fii_dii_store.py  history_store.py  main.py  trace_store.py  watchlist_store.py
services/api/api/routes/: analyze.py  backtest.py  health.py  history.py  market.py  watchlist.py
services/frontend/: package-lock.json  package.json  tailwind.config.ts
services/frontend/app/: globals.css  layout.tsx
services/frontend/components/: ChartsPanel.tsx  HistoryTable.tsx  MetricCards.tsx  QuoteCard.tsx  RAGEvidencePanel.tsx  ReportViewer.tsx  Sidebar.tsx  StepTracker.tsx
services/frontend/lib/: api.ts  stream.ts
services/worker/: pyproject.toml
services/worker/worker/: charts.py  graph.py  main.py
services/worker/worker/backtest/: __main__.py  heuristic.py  metrics.py  outcomes.py  results.py  runner.py  sampler.py
services/worker/worker/council/: llm.py  parser.py  personas.py  variance.py
services/worker/worker/nodes/: council.py  divergence.py  features.py  ingest.py  report.py  validate.py
services/worker/worker/report/: evidence.py  flags.py  llm.py  parser.py  prompt.py
tests/integration/: test_analyze_endpoint.py  test_backtest_endpoint.py  test_council_endpoint.py  test_health.py  test_report_endpoint.py
tests/unit/api/: test_history_store.py
tests/unit/connectors/: test_base.py  test_cache.py  test_document_rag.py  test_fii_dii.py  test_fundamentals.py  test_ipo_gmp_connector.py  test_market_data.py  test_nav.py  test_news_aggregator.py  test_nse_announcements.py  test_nse_document_fetcher.py  test_nse_quotes.py  test_screener.py  test_sentiment.py
tests/unit/features/: test_divergence.py  test_fii_dii_features.py  test_ipo_gmp_features.py  test_rrg.py  test_schemas.py
tests/unit/schemas/: test_backtest_schema.py  test_report_schema.py  test_state.py
tests/unit/worker/: test_council_node.py  test_divergence_node.py  test_feature_node.py  test_ingest_node.py  test_report_node.py  test_validate_node.py
(+18 files in other folders)
