[project]
name = "pulsealpha-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "schemas",
  "connectors",
  "api",
  "worker",
]

[tool.uv.sources]
schemas = { workspace = true }
connectors = { workspace = true }
api = { workspace = true }
worker = { workspace = true }

[tool.uv.workspace]
members = [
  "libs/schemas",
  "libs/connectors",
  "services/api",
  "services/worker",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.4",
  "mypy>=1.10",
  "coverage[toml]>=7.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
