[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "schemas",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.3",
  "asyncpg>=0.29",
  "sqlalchemy[asyncio]>=2.0",
]

[tool.uv.sources]
schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]
