[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "schemas",
  "connectors",
  "features",
  "langgraph>=0.2",
  "langchain>=0.2",
  "langchain-huggingface>=1.0",
  "langchain-ollama>=0.3",
  "huggingface-hub>=0.23",
]

[tool.uv.sources]
schemas = { workspace = true }
connectors = { workspace = true }
features = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]
